@@ -5,4 +5,8 @@ A dynamic, open source programming language with a focus on simplicity and produ
 * natural to read
 * easy to write
 
-It makes programmers happy.
+Working in Ruby makes programmers happy.
+
+Matz is nice so we are nice.
+
+Ruby is a good language to learn to code. It reads like English.
