@@ -10,3 +10,5 @@
 2013 - Ruby 2.1 released.
 2014 - Ruby 2.2 released.
 2015 - Ruby 2.3 released.
+2018 - Ruby 2.6 released.
+
