@@ -1,0 +1,14 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 1%;
+}
+
+.message {
+  background-color: rgb(249, 245, 148);
+  padding: 5px;
+}
+
+.message p {
+  padding-left: inherit;
+  margin: 5px;
+}
