@@ -1,3 +1,1 @@
-<p>
-  <%= @document %>
-</p>
+<%= @document %>
